# leptos-web-trading

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-repo/: action.yaml
.github/workflows/: audit.yaml  check.yaml  deny.yaml  depoy.yaml  doc.yaml  msrv.yaml  test.yaml  unused-deps.yaml
app/: Cargo.toml
app/src/: app_router.rs  error_template.rs  lib.rs
app/src/components/: footer.rs  game_list.rs  header.rs  home.rs  markets.rs  mod.rs  navbar.rs
app/src/components/markets/: ladder_view.rs  market_list.rs
app/src/layout/: base.rs  default_layout.rs  error_layout.rs  mod.rs
app/src/pages/: community.rs  error.rs  home.rs  market.rs  mod.rs
app/src/pages/market/: active_bets.rs  ladder_view.rs  market_list.rs
crates/trading-view/: Cargo.toml  Dockerfile  README.md
crates/trading-view/src/: app.rs  main.rs
server/: Cargo.toml  Dockerfile
server/live-connection/: Cargo.toml
server/live-connection/src/: lib.rs  ws.rs
server/src/: fileserv.rs  main.rs  state.rs  ws.rs
server/state/: Cargo.toml
server/state/src/: lib.rs  markets.rs  webapp_state.rs
style/: input.css
trading-core/: Cargo.toml
trading-core/src/: common.rs  from_server.rs  from_trader.rs  lib.rs
trading/trading-logic/: Cargo.toml
trading/trading-logic/src/: bot.rs  lib.rs  market.rs
trading/trading-types/: Cargo.toml
trading/trading-types/src/: common.rs  from_server.rs  from_trader.rs  lib.rs
