[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
state = { path = "../server/state", optional = true }
trading-types = { path = "../trading/trading-types" }
ciborium.workspace = true
js-sys = { version = "0.3" }

gloo-net.workspace = true
gloo-timers.workspace = true
futures.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

serde.workspace = true
chrono.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:state",
]
