[package]
name = "live-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "../state" }
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
futures.workspace = true
tower-http.workspace = true
log.workspace = true
actix.workspace = true
nanoid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trading-types = { path = "../../trading/trading-types" }
trading-logic = { path = "../../trading/trading-logic" }
