[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

trading-types = { path = "../../trading/trading-types" }
trading-logic = { path = "../../trading/trading-logic" }
actix.workspace = true
serde.workspace = true
chrono.workspace = true
leptos.workspace = true
axum.workspace = true
