[package]
name = "trading-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trading-types = { path = "../trading-types" }

actix.workspace = true
futures.workspace = true
tracing.workspace = true
