[package]
name = "trading-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-types = { path = "../trading-types" }

actix.workspace = true
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
futures.workspace = true
tracing.workspace = true
nanoid.workspace = true
rand.workspace = true
